# scrape

./: .gitignore  Dockerfile  api.py  app.py  docker-compose.yml  photos.py  pyproject.toml  requirements.txt  testrest.http
FastAPI/: main.py
React/mangavault/: package-lock.json  package.json
React/mangavault/src/: App.js
